@@ -2,6 +2,7 @@
 
 	* bugfix: random characters in MLSD (Closes: #0046)
 	* bugfix: provides Type in MLSD, even for VFS (Really Closes: #0042)
+	* bugfix: segfault in RMDIR when using SFV module without all needed parameters
 
 2006-09-04  Pierre Chifflier  <pollux@cpe.fr>
 
